[package]
name = "query_system_info"
version = "0.1.0"
edition = "2021"
description = "A cross-platform library for querying system information including memory, CPU, processes, disk I/O, and socket connections"
license = "MIT"
repository = "https://github.com/yourusername/query_system_info"
keywords = ["system", "monitor", "cross-platform", "sysinfo"]
categories = ["os", "api-bindings"]

[dependencies]
thiserror = "1.0"
libproc = {version = "*" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "*"
netlink-packet-core = "0.7.0"
netlink-packet-sock-diag = "0.4"
netlink-sys = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
mach2 = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
