[build-system]
requires = ["maturin >= 1.10"]
build-backend = "maturin"

[project]
name = "py-query-system-info"
version = "0.1.3"
description = "A cross-platform library for querying system information including memory, CPU, processes, disk I/O, and socket connections"
authors = [
    { name = "wuyoumaster", email = "wuyoumaster@gmail.com" }
]
license = "MIT"
dependencies = [
    "query_system_info",
]

[tool.maturin]
bindings = "pyo3"
module-name = "py_query_system_info"