[package]
name = "query-server"
version = "0.1.0"
edition = "2021"
description = "HTTP/SSE server for system information monitoring"

[dependencies]
query_system_info = { path = ".." }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
async-stream = "0.3"

# CLI and config
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", features = ["json"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "mysql",
    "macros",
    "chrono",
] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
